# tapo-control

./: .gitignore  INSTALLATION_GUIDE.md  PACKAGING.md  POST_INSTALL.md  QUICK_START.md  README.md  create_env.py  env.example  laptop_battery_loop.py  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  tapo_control.py
