[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tapo-control"
version = "1.0.0"
description = "Control Tapo P110 smart plugs and monitor laptop battery levels"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["tapo", "p110", "smart-plug", "battery-monitoring", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tapo>=0.8.7",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
tapo-control = "main:main"

[tool.setuptools]
py-modules = ["tapo_control", "laptop_battery_loop", "main"]

